chore: run build installing binary

--- a/package.json
+++ b/package.json
@@ -129,12 +129,13 @@
     "clean": "trash **.DS_Store *.log .bin .nyc_output coverage dist node_modules",
     "fix": "npm-run-all fixpack",
     "fixpack": "fixpack",
+    "install:bin": "dist/install-binary",
     "lint": "npm-run-all lint:js lint:md",
     "lint:js": "eslint . --ext .js,.md",
     "lint:md": "remark --frail .",
     "outdated": "npm-run-all outdated:npm",
     "outdated:npm": "ncu",
-    "postinstall": "dist/install-binary",
+    "postinstall": "npm-run-all build install:bin",
     "test": "nyc ava",
     "test:cov": "nyc check-coverage",
     "test:cov:report": "nyc report --reporter=html",
