--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,16 @@
 version: 2
 jobs:
-  build_and_check:
+  check:
     docker:
       - image: circleci/node:10.9.0
     steps:
       - checkout
-      - run: yarn
-      - run: yarn run build
+      - run: yarn install
       - run: yarn run ci:precheck
       - run: yarn run check
       - run: yarn run ci:postcheck
 workflows:
   version: 2
-  build_and_check:
+  check:
     jobs:
-      - build_and_check
+      - check
