--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-markdown": "1.0.0-beta.8",
     "fixpack": "2.3.1",
     "flow-bin": "0.81.0",
+    "greenkeeper-lockfile": "2.7.1",
     "npm-check-updates": "3.0.0-alpha.3",
     "npm-run-all": "4.1.3",
     "nsp": "3.2.1",
@@ -133,8 +134,7 @@
     "lint": "npm-run-all lint:js lint:md",
     "lint:js": "eslint . --ext .js,.md",
     "lint:md": "remark --frail .",
-    "outdated": "npm-run-all outdated:npm",
-    "outdated:npm": "ncu",
+    "outdated": "ncu",
     "postinstall": "npm-run-all build install:bin",
     "test": "nyc ava",
     "test:cov": "nyc check-coverage",
