--- a/package.json
+++ b/package.json
@@ -123,7 +123,8 @@
   "scripts": {
     "audit": "nsp check",
     "build": "rollup -c rollup.config.js -o dist/install-binary src/code/scripts/install-binary",
-    "check": "npm-run-all audit ci:validate ci:run fixpack lint test test:cov typecheck",
+    "check": "npm-run-all audit fixpack lint test test:cov typecheck",
+    "ci:check": "ci:validate ci:run",
     "ci:postcheck": "greenkeeper-lockfile-upload",
     "ci:precheck": "greenkeeper-lockfile-update",
     "ci:run": ".bin/circleci build --job check",
