--- a/package.json
+++ b/package.json
@@ -39,16 +39,17 @@
     "@babel/plugin-proposal-unicode-property-regex": "7.0.0",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/plugin-syntax-import-meta": "7.0.0",
+    "@babel/plugin-transform-flow-strip-types": "7.0.0",
     "@babel/preset-env": "7.1.0",
-    "@babel/preset-flow": "7.0.0",
     "@commitlint/cli": "7.1.2",
     "@commitlint/config-conventional": "7.1.2",
-    "@psirenny/babel-preset": "1.2.0",
-    "@psirenny/eslint-config": "1.2.0",
-    "@psirenny/remark-preset": "1.2.0",
-    "@psirenny/retext-preset": "1.2.0",
+    "@psirenny/babel-preset": "1.3.1",
+    "@psirenny/eslint-config": "1.3.0",
+    "@psirenny/remark-preset": "1.3.0",
+    "@psirenny/retext-preset": "1.3.0",
     "ava": "1.0.0-beta.8",
-    "babel-eslint": "9.0.0",
+    "babel-eslint": "10.0.0",
+    "babel-plugin-preval": "3.0.1",
     "dictionary-en-us": "2.0.0",
     "dir-compare": "1.4.0",
     "eslint": "5.6.0",
@@ -56,7 +57,7 @@
     "eslint-plugin-ava": "5.1.1",
     "eslint-plugin-babel": "5.2.0",
     "eslint-plugin-eslint-plugin": "1.4.0",
-    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-flowtype": "2.50.2",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-markdown": "1.0.0-beta.8",
@@ -99,8 +100,8 @@
     "retext-spell": "2.3.1",
     "retext-syntax-mentions": "1.1.4",
     "retext-syntax-urls": "1.0.0",
-    "rollup": "0.66.0",
-    "rollup-plugin-babel": "4.0.3",
+    "rollup": "0.66.2",
+    "rollup-plugin-babel": "4.1.0-0",
     "rollup-plugin-hashbang": "1.0.1",
     "tempy": "0.2.1",
     "trash-cli": "1.4.0",
