--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "fixpack": "2.3.1",
     "flow-bin": "0.81.0",
     "greenkeeper-lockfile": "2.7.1",
+    "husky": "1.0.1",
     "npm-run-all": "4.1.3",
     "nsp": "3.2.1",
     "nyc": "13.1.0",
