chore: replace `fixpack` with `npm-package-json-lint`
Fix node security errors

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "circleci-bin",
-  "description": "CircleCI local command line tool distributed as a node module",
   "version": "1.0.0",
+  "description": "CircleCI local command line tool distributed as a node module",
   "author": "Dennis Torres <djtorres0@gmail.com>",
   "bin": {
     "circleci": ".bin/circleci"
@@ -45,10 +45,11 @@
     "@commitlint/config-conventional": "7.1.2",
     "@psirenny/babel-preset": "1.3.1",
     "@psirenny/eslint-config": "1.3.0",
+    "@psirenny/npm-package-json-lint-config": "1.0.0",
     "@psirenny/remark-preset": "1.3.0",
     "@psirenny/retext-preset": "1.3.0",
     "ava": "1.0.0-beta.8",
-    "babel-eslint": "10.0.0",
+    "babel-eslint": "9.0.0-beta.3",
     "babel-plugin-preval": "3.0.1",
     "dictionary-en-us": "2.0.0",
     "dir-compare": "1.4.0",
@@ -61,12 +62,11 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-markdown": "1.0.0-beta.8",
-    "fixpack": "2.3.1",
     "flow-bin": "0.81.0",
     "greenkeeper-lockfile": "2.7.1",
     "husky": "1.0.1",
+    "npm-package-json-lint": "3.3.1",
     "npm-run-all": "4.1.3",
-    "nsp": "3.2.1",
     "nyc": "13.1.0",
     "remark-cli": "5.0.0",
     "remark-lint-blockquote-indentation": "1.0.2",
@@ -104,6 +104,7 @@
     "rollup": "0.66.2",
     "rollup-plugin-babel": "4.1.0-0",
     "rollup-plugin-hashbang": "1.0.1",
+    "synp": "1.3.1",
     "tempy": "0.2.1",
     "trash-cli": "1.4.0",
     "unified": "7.0.0",
@@ -124,7 +125,7 @@
   },
   "scripts": {
     "build": "rollup -c rollup.config.js -o dist/install-binary src/code/scripts/install-binary",
-    "check": "npm-run-all deps:audit fixpack lint test test:cov typecheck",
+    "check": "npm-run-all deps:audit lint test test:cov typecheck",
     "ci:check": "ci:validate ci:run",
     "ci:run": ".bin/circleci build --job check",
     "ci:validate": ".bin/circleci config validate",
@@ -132,12 +133,11 @@
     "deps:audit": "synp --source-file yarn.lock; npm audit; rm -f package-lock.json",
     "deps:updates:check": "updates -gp",
     "deps:updates:update": "updates -gpu",
-    "fix": "npm-run-all fixpack",
-    "fixpack": "fixpack",
     "install:bin": "dist/install-binary",
-    "lint": "npm-run-all lint:js lint:md",
+    "lint": "npm-run-all lint:js lint:md lint:pkg",
     "lint:js": "eslint . --ext .js,.md",
     "lint:md": "remark --frail .",
+    "lint:pkg": "npmPkgJsonLint ./package.json",
     "postinstall": "npm-run-all build install:bin",
     "test": "nyc ava",
     "test:cov": "nyc check-coverage",
