--- a/package.json
+++ b/package.json
@@ -124,27 +124,27 @@
     "url": "https://github.com/psirenny/circleci-bin"
   },
   "scripts": {
+    "audit": "synp --source-file yarn.lock; npm audit; rm -f package-lock.json",
     "build": "rollup -c rollup.config.js -o dist/install-binary src/code/scripts/install-binary",
-    "check": "npm-run-all deps:audit lint test test:cov typecheck",
+    "check": "npm-run-all audit lint test test:cov typecheck",
     "ci:check": "ci:validate ci:run",
     "ci:run": ".bin/circleci build --job check",
     "ci:validate": ".bin/circleci config validate",
     "clean": "trash **.DS_Store *.log .bin .nyc_output coverage dist node_modules",
-    "deps:audit": "synp --source-file yarn.lock; npm audit; rm -f package-lock.json",
-    "deps:updates:check": "updates -gp",
-    "deps:updates:update": "updates -gpu",
     "install:bin": "dist/install-binary",
     "lint": "npm-run-all lint:js lint:md lint:pkg",
     "lint:js": "eslint . --ext .js,.md",
     "lint:md": "remark --frail .",
     "lint:pkg": "npmPkgJsonLint ./package.json",
+    "outdated": "updates -gp",
     "postinstall": "npm-run-all build install:bin",
     "test": "nyc ava",
     "test:cov": "nyc check-coverage",
     "test:cov:report": "nyc report --reporter=html",
     "typecheck": "flow .",
+    "update": "npm-run-all update:bin update:npm",
     "update:bin": "babel-node src/code/scripts/update-version",
-    "update:npm": "ncu -u"
+    "update:npm": "updates -gpu"
   },
   "sideEffects": false
 }
