--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "rollup": "0.66.2",
     "rollup-plugin-babel": "4.1.0-0",
     "rollup-plugin-hashbang": "1.0.1",
+    "standard-version": "4.4.0",
     "synp": "1.3.1",
     "tempy": "0.2.1",
     "trash-cli": "1.4.0",
@@ -138,6 +139,7 @@
     "lint:pkg": "npmPkgJsonLint ./package.json",
     "outdated": "updates -gp",
     "postinstall": "npm-run-all build install:bin",
+    "release": "standard-version",
     "test": "nyc ava",
     "test:cov": "nyc check-coverage",
     "test:cov:report": "nyc report --reporter=html",
