--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "circleci-bin",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "CircleCI local command line tool distributed as a node module",
   "author": "Dennis Torres <djtorres0@gmail.com>",
   "bin": {
@@ -110,7 +110,12 @@
     "updates": "4.3.0"
   },
   "homepage": "https://github.com/psirenny/circleci-bin",
-  "keywords": ["binary", "CircleCI", "cli", "local"],
+  "keywords": [
+    "binary",
+    "CircleCI",
+    "cli",
+    "local"
+  ],
   "license": "Unlicense",
   "main": "dist/index.js",
   "repository": "github:psirenny/circleci-bin",
