--- a/package.json
+++ b/package.json
@@ -122,24 +122,24 @@
   "scripts": {
     "audit": "synp --source-file yarn.lock; npm audit; rm -f package-lock.json",
     "build": "rollup -c rollup.config.js -o dist/install-binary src/code/scripts/install-binary",
-    "check": "npm-run-all audit lint test test:cov typecheck",
+    "check": "run-s audit lint test test:cov typecheck",
     "ci:check": "ci:validate ci:run",
     "ci:run": ".bin/circleci build --job check",
     "ci:validate": ".bin/circleci config validate",
     "clean": "trash **.DS_Store *.log .bin .nyc_output coverage dist node_modules",
     "install:bin": "dist/install-binary",
-    "lint": "npm-run-all lint:js lint:md lint:pkg",
+    "lint": "run-s lint:js lint:md lint:pkg",
     "lint:js": "eslint . --ext .js,.md",
     "lint:md": "remark --frail .",
     "lint:pkg": "npmPkgJsonLint ./package.json",
     "outdated": "updates -gp",
-    "postinstall": "npm-run-all build install:bin",
+    "postinstall": "run-s install:bin",
     "release": "standard-version",
     "test": "nyc ava",
     "test:cov": "nyc check-coverage",
     "test:cov:report": "nyc report --reporter=html",
     "typecheck": "flow .",
-    "update": "npm-run-all update:bin update:npm",
+    "update": "run-s update:bin update:npm",
     "update:bin": "babel-node src/code/scripts/update-version",
     "update:npm": "updates -gpu"
   },
