--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "tempy": "0.2.1"
   },
   "devDependencies": {
-    "@babel/core": "7.1.1",
+    "@babel/core": "7.1.2",
     "@babel/node": "7.0.0",
     "@babel/plugin-external-helpers": "7.0.0",
     "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-proposal-decorators": "7.1.1",
+    "@babel/plugin-proposal-decorators": "7.1.2",
     "@babel/plugin-proposal-do-expressions": "7.0.0",
     "@babel/plugin-proposal-export-default-from": "7.0.0",
     "@babel/plugin-proposal-export-namespace-from": "7.0.0",
@@ -40,31 +40,32 @@
     "@babel/plugin-syntax-import-meta": "7.0.0",
     "@babel/plugin-transform-flow-strip-types": "7.0.0",
     "@babel/preset-env": "7.1.0",
-    "@commitlint/cli": "7.1.2",
+    "@commitlint/cli": "7.2.0",
     "@commitlint/config-conventional": "7.1.2",
     "@psirenny/babel-preset": "1.3.1",
-    "@psirenny/eslint-config": "1.3.0",
+    "@psirenny/eslint-config": "1.4.0",
     "@psirenny/npm-package-json-lint-config": "1.0.0",
     "@psirenny/remark-preset": "1.3.0",
     "@psirenny/retext-preset": "1.3.0",
     "ava": "1.0.0-beta.8",
-    "babel-eslint": "9.0.0-beta.3",
+    "babel-eslint": "10.0.1",
     "babel-plugin-preval": "3.0.1",
     "dictionary-en-us": "2.0.0",
     "dir-compare": "1.4.0",
-    "eslint": "5.6.0",
+    "eslint": "5.6.1",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-plugin-ava": "5.1.1",
     "eslint-plugin-babel": "5.2.1",
     "eslint-plugin-eslint-plugin": "1.4.0",
     "eslint-plugin-flowtype": "2.50.3",
     "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-markdown": "1.0.0-beta.8",
+    "eslint-plugin-optimize-regex": "1.1.6",
     "flow-bin": "0.82.0",
     "greenkeeper-lockfile": "2.7.1",
-    "husky": "1.1.0",
-    "npm-package-json-lint": "3.3.1",
+    "husky": "1.1.1",
+    "npm-package-json-lint": "3.4.0",
     "nyc": "13.1.0",
     "remark-cli": "5.0.0",
     "remark-lint-blockquote-indentation": "1.0.2",
@@ -99,7 +100,7 @@
     "retext-spell": "2.3.1",
     "retext-syntax-mentions": "1.1.4",
     "retext-syntax-urls": "1.0.0",
-    "rollup": "0.66.3",
+    "rollup": "0.66.5",
     "rollup-plugin-babel": "4.1.0-0",
     "rollup-plugin-hashbang": "1.0.1",
     "standard-version": "4.4.0",
@@ -107,7 +108,7 @@
     "tempy": "0.2.1",
     "trash-cli": "1.4.0",
     "unified": "7.0.0",
-    "updates": "4.4.0"
+    "updates": "4.5.2"
   },
   "homepage": "https://github.com/psirenny/circleci-bin",
   "keywords": [
