chore: add verbose test logs

--- a/package.json
+++ b/package.json
@@ -137,7 +137,7 @@
     "outdated": "updates -gp",
     "postinstall": "run-s install:bin",
     "release": "standard-version",
-    "test": "nyc ava",
+    "test": "nyc ava --verbose",
     "test:cov": "nyc check-coverage",
     "test:cov:report": "nyc report --reporter=html",
     "typecheck": "flow .",
