--- a/package.json
+++ b/package.json
@@ -40,34 +40,36 @@
     "@babel/plugin-syntax-import-meta": "7.0.0",
     "@babel/plugin-transform-flow-strip-types": "7.0.0",
     "@babel/preset-env": "7.1.0",
-    "@commitlint/cli": "7.2.0",
+    "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
-    "@psirenny/babel-preset": "1.3.1",
-    "@psirenny/eslint-config": "1.4.0",
-    "@psirenny/npm-package-json-lint-config": "1.0.0",
-    "@psirenny/remark-preset": "1.3.0",
-    "@psirenny/retext-preset": "1.3.0",
-    "ava": "1.0.0-beta.8",
+    "@psirenny/babel-preset": "1.4.0",
+    "@psirenny/eslint-config": "1.6.2",
+    "@psirenny/npm-package-json-lint-config": "1.2.0",
+    "@psirenny/remark-preset": "1.4.0",
+    "@psirenny/retext-preset": "1.4.0",
+    "ava": "1.0.0-rc.1",
     "babel-eslint": "10.0.1",
     "babel-plugin-preval": "3.0.1",
     "dictionary-en-us": "2.0.0",
     "dir-compare": "1.4.0",
-    "eslint": "5.6.1",
+    "eslint": "5.8.0",
     "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-array-func": "3.0.0",
     "eslint-plugin-ava": "5.1.1",
     "eslint-plugin-babel": "5.2.1",
-    "eslint-plugin-eslint-plugin": "1.4.0",
-    "eslint-plugin-flowtype": "2.50.3",
+    "eslint-plugin-eslint-comments": "3.0.1",
+    "eslint-plugin-eslint-plugin": "1.4.1",
+    "eslint-plugin-flowtype": "3.2.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-markdown": "1.0.0-beta.8",
+    "eslint-plugin-markdown": "1.0.0-rc.0",
     "eslint-plugin-optimize-regex": "1.1.6",
-    "flow-bin": "0.82.0",
+    "flow-bin": "0.85.0",
     "greenkeeper-lockfile": "2.7.1",
-    "husky": "1.1.1",
-    "npm-package-json-lint": "3.4.0",
+    "husky": "1.1.3",
+    "npm-package-json-lint": "3.4.1",
     "nyc": "13.1.0",
-    "remark-cli": "5.0.0",
+    "remark-cli": "6.0.0",
     "remark-lint-blockquote-indentation": "1.0.2",
     "remark-lint-checkbox-character-style": "1.0.2",
     "remark-lint-code-block-style": "1.0.2",
@@ -86,29 +88,29 @@
     "retext-contractions": "2.1.2",
     "retext-diacritics": "1.2.1",
     "retext-english": "3.0.0",
-    "retext-equality": "3.4.1",
+    "retext-equality": "3.6.0",
     "retext-indefinite-article": "1.1.4",
     "retext-intensify": "3.0.1",
     "retext-passive": "1.3.0",
-    "retext-profanities": "4.4.0",
+    "retext-profanities": "4.5.0",
     "retext-quotes": "2.0.1",
     "retext-readability": "4.2.0",
-    "retext-redundant-acronyms": "1.2.1",
-    "retext-repeated-words": "1.2.1",
+    "retext-redundant-acronyms": "1.2.2",
+    "retext-repeated-words": "1.2.2",
     "retext-sentence-spacing": "2.0.1",
-    "retext-simplify": "4.1.1",
+    "retext-simplify": "4.1.2",
     "retext-spell": "2.3.1",
     "retext-syntax-mentions": "1.1.4",
     "retext-syntax-urls": "1.0.0",
-    "rollup": "0.66.5",
+    "rollup": "0.67.0",
     "rollup-plugin-babel": "4.1.0-0",
     "rollup-plugin-hashbang": "1.0.1",
-    "standard-version": "4.4.0",
-    "synp": "1.3.1",
+    "standard-version": "5.0.0-candidate.0",
+    "synp": "1.3.2",
     "tempy": "0.2.1",
     "trash-cli": "1.4.0",
-    "unified": "7.0.0",
-    "updates": "4.5.2"
+    "unified": "7.0.1",
+    "updates": "5.1.2"
   },
   "homepage": "https://github.com/psirenny/circleci-bin",
   "keywords": [
@@ -128,6 +130,7 @@
     "ci:run": ".bin/circleci build --job check",
     "ci:validate": ".bin/circleci config validate",
     "clean": "trash **.DS_Store *.log .bin .nyc_output coverage dist node_modules",
+    "fix": "eslint --fix . --ext .js,.md",
     "install:bin": "dist/install-binary",
     "install:dev": "yarn install --ignore-scripts && yarn run build && yarn install --force",
     "lint": "run-s lint:js lint:md lint:pkg",
