--- a/package.json
+++ b/package.json
@@ -106,7 +106,6 @@
     "rollup-plugin-babel": "4.1.0-0",
     "rollup-plugin-hashbang": "1.0.1",
     "standard-version": "5.0.0-candidate.0",
-    "synp": "1.3.2",
     "tempy": "0.2.1",
     "trash-cli": "1.4.0",
     "unified": "7.0.1",
@@ -123,7 +122,7 @@
   "main": "dist/index.js",
   "repository": "github:psirenny/circleci-bin",
   "scripts": {
-    "audit": "synp --source-file yarn.lock; npm audit; rm -f package-lock.json",
+    "audit": "yarn audit",
     "build": "rollup -c rollup.config.js -o dist/install-binary src/code/scripts/install-binary",
     "check": "run-s audit lint test test:cov typecheck",
     "ci:check": "ci:validate ci:run",
