--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "tempy": "0.2.1"
   },
   "devDependencies": {
-    "@babel/core": "7.2.0",
-    "@babel/node": "7.2.0",
+    "@babel/core": "7.2.2",
+    "@babel/node": "7.2.2",
     "@babel/plugin-external-helpers": "7.2.0",
-    "@babel/plugin-proposal-class-properties": "7.2.1",
-    "@babel/plugin-proposal-decorators": "7.2.0",
+    "@babel/plugin-proposal-class-properties": "7.2.3",
+    "@babel/plugin-proposal-decorators": "7.2.3",
     "@babel/plugin-proposal-do-expressions": "7.2.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
@@ -38,35 +38,35 @@
     "@babel/plugin-proposal-unicode-property-regex": "7.2.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
-    "@babel/plugin-transform-flow-strip-types": "7.2.0",
-    "@babel/preset-env": "7.2.0",
-    "@commitlint/cli": "7.2.1",
-    "@commitlint/config-conventional": "7.1.2",
-    "@psirenny/babel-preset": "1.4.2",
-    "@psirenny/eslint-config": "1.6.4",
-    "@psirenny/npm-package-json-lint-config": "1.2.2",
-    "@psirenny/remark-preset": "1.4.2",
-    "@psirenny/retext-preset": "1.4.2",
-    "ava": "1.0.0-rc.2",
+    "@babel/plugin-transform-flow-strip-types": "7.2.3",
+    "@babel/preset-env": "7.2.3",
+    "@commitlint/cli": "7.3.2",
+    "@commitlint/config-conventional": "7.3.1",
+    "@psirenny/babel-preset": "1.5.1",
+    "@psirenny/eslint-config": "1.6.6",
+    "@psirenny/npm-package-json-lint-config": "1.2.4",
+    "@psirenny/remark-preset": "1.4.4",
+    "@psirenny/retext-preset": "1.4.4",
+    "ava": "1.1.0",
     "babel-eslint": "10.0.1",
     "babel-plugin-preval": "3.0.1",
     "dictionary-en-us": "2.0.0",
-    "dir-compare": "1.4.0",
-    "eslint": "5.10.0",
+    "dir-compare": "1.6.0",
+    "eslint": "5.12.1",
     "eslint-config-airbnb-base": "13.1.0",
-    "eslint-plugin-array-func": "3.1.0",
+    "eslint-plugin-array-func": "3.1.2",
     "eslint-plugin-ava": "5.1.1",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-eslint-comments": "3.0.1",
-    "eslint-plugin-eslint-plugin": "2.0.0",
-    "eslint-plugin-flowtype": "3.2.0",
+    "eslint-plugin-eslint-plugin": "2.0.1",
+    "eslint-plugin-flowtype": "3.2.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-markdown": "1.0.0-rc.1",
+    "eslint-plugin-markdown": "1.0.0-beta.1",
     "eslint-plugin-optimize-regex": "1.1.6",
-    "flow-bin": "0.88.0",
+    "flow-bin": "0.91.0",
     "greenkeeper-lockfile": "2.8.0",
-    "husky": "1.2.0",
+    "husky": "1.3.1",
     "npm-package-json-lint": "3.4.1",
     "nyc": "13.1.0",
     "remark-cli": "6.0.1",
@@ -76,10 +76,10 @@
     "remark-lint-emphasis-marker": "1.0.2",
     "remark-lint-fenced-code-marker": "1.0.2",
     "remark-lint-heading-style": "1.0.2",
-    "remark-lint-link-title-style": "1.0.2",
+    "remark-lint-link-title-style": "1.0.3",
     "remark-lint-rule-style": "1.0.2",
     "remark-lint-strong-marker": "1.0.2",
-    "remark-lint-table-cell-padding": "1.0.2",
+    "remark-lint-table-cell-padding": "1.0.3",
     "remark-preset-lint-consistent": "2.0.2",
     "remark-preset-lint-markdown-style-guide": "2.1.2",
     "remark-preset-lint-recommended": "3.0.2",
@@ -88,7 +88,7 @@
     "retext-contractions": "2.1.3",
     "retext-diacritics": "1.2.2",
     "retext-english": "3.0.2",
-    "retext-equality": "3.7.0",
+    "retext-equality": "3.8.0",
     "retext-indefinite-article": "1.1.5",
     "retext-intensify": "3.0.2",
     "retext-passive": "1.3.2",
@@ -97,19 +97,19 @@
     "retext-readability": "4.2.1",
     "retext-redundant-acronyms": "1.2.2",
     "retext-repeated-words": "1.2.2",
-    "retext-sentence-spacing": "2.0.3",
+    "retext-sentence-spacing": "2.1.0",
     "retext-simplify": "4.1.2",
     "retext-spell": "2.4.0",
     "retext-syntax-mentions": "1.1.5",
     "retext-syntax-urls": "1.0.1",
-    "rollup": "0.67.4",
-    "rollup-plugin-babel": "4.1.0-0",
+    "rollup": "1.1.0",
+    "rollup-plugin-babel": "5.0.0-alpha.0",
     "rollup-plugin-hashbang": "1.0.1",
     "standard-version": "5.0.0-candidate.0",
     "tempy": "0.2.1",
     "trash-cli": "1.4.0",
-    "unified": "7.0.2",
-    "updates": "5.4.3"
+    "unified": "7.1.0",
+    "updates": "6.0.3"
   },
   "homepage": "https://github.com/psirenny/circleci-bin",
   "keywords": [
