--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "tempy": "0.2.1"
   },
   "devDependencies": {
-    "@babel/core": "7.2.2",
+    "@babel/core": "7.3.3",
     "@babel/node": "7.2.2",
     "@babel/plugin-external-helpers": "7.2.0",
-    "@babel/plugin-proposal-class-properties": "7.2.3",
-    "@babel/plugin-proposal-decorators": "7.2.3",
+    "@babel/plugin-proposal-class-properties": "7.3.3",
+    "@babel/plugin-proposal-decorators": "7.3.0",
     "@babel/plugin-proposal-do-expressions": "7.2.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
@@ -30,45 +30,45 @@
     "@babel/plugin-proposal-logical-assignment-operators": "7.2.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.2.0",
     "@babel/plugin-proposal-numeric-separator": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.2",
     "@babel/plugin-proposal-optional-catch-binding": "7.2.0",
     "@babel/plugin-proposal-optional-chaining": "7.2.0",
-    "@babel/plugin-proposal-pipeline-operator": "7.2.0",
+    "@babel/plugin-proposal-pipeline-operator": "7.3.2",
     "@babel/plugin-proposal-throw-expressions": "7.2.0",
     "@babel/plugin-proposal-unicode-property-regex": "7.2.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
     "@babel/plugin-transform-flow-strip-types": "7.2.3",
-    "@babel/preset-env": "7.2.3",
-    "@commitlint/cli": "7.3.2",
-    "@commitlint/config-conventional": "7.3.1",
+    "@babel/preset-env": "7.3.1",
+    "@commitlint/cli": "7.5.2",
+    "@commitlint/config-conventional": "7.5.0",
     "@psirenny/babel-preset": "1.5.1",
     "@psirenny/eslint-config": "1.6.6",
     "@psirenny/npm-package-json-lint-config": "1.2.4",
     "@psirenny/remark-preset": "1.4.4",
     "@psirenny/retext-preset": "1.4.4",
-    "ava": "1.1.0",
+    "ava": "1.2.1",
     "babel-eslint": "10.0.1",
     "babel-plugin-preval": "3.0.1",
     "dictionary-en-us": "2.0.0",
-    "dir-compare": "1.6.0",
-    "eslint": "5.12.1",
+    "dir-compare": "1.7.1",
+    "eslint": "5.14.1",
     "eslint-config-airbnb-base": "13.1.0",
-    "eslint-plugin-array-func": "3.1.2",
+    "eslint-plugin-array-func": "3.1.3",
     "eslint-plugin-ava": "5.1.1",
     "eslint-plugin-babel": "5.3.0",
-    "eslint-plugin-eslint-comments": "3.0.1",
+    "eslint-plugin-eslint-comments": "3.1.1",
     "eslint-plugin-eslint-plugin": "2.0.1",
-    "eslint-plugin-flowtype": "3.2.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-markdown": "1.0.0-beta.1",
+    "eslint-plugin-flowtype": "3.4.2",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-markdown": "1.0.0",
     "eslint-plugin-optimize-regex": "1.1.6",
-    "flow-bin": "0.91.0",
+    "flow-bin": "0.93.0",
     "greenkeeper-lockfile": "2.8.0",
     "husky": "1.3.1",
-    "npm-package-json-lint": "3.4.1",
-    "nyc": "13.1.0",
+    "npm-package-json-lint": "3.5.0",
+    "nyc": "13.3.0",
     "remark-cli": "6.0.1",
     "remark-lint-blockquote-indentation": "1.0.2",
     "remark-lint-checkbox-character-style": "1.0.2",
@@ -88,7 +88,7 @@
     "retext-contractions": "2.1.3",
     "retext-diacritics": "1.2.2",
     "retext-english": "3.0.2",
-    "retext-equality": "3.8.0",
+    "retext-equality": "3.9.1",
     "retext-indefinite-article": "1.1.5",
     "retext-intensify": "3.0.2",
     "retext-passive": "1.3.2",
@@ -102,10 +102,10 @@
     "retext-spell": "2.4.0",
     "retext-syntax-mentions": "1.1.5",
     "retext-syntax-urls": "1.0.1",
-    "rollup": "1.1.2",
+    "rollup": "1.2.2",
     "rollup-plugin-babel": "5.0.0-alpha.0",
-    "rollup-plugin-executable": "1.4.3",
-    "standard-version": "5.0.0-candidate.0",
+    "rollup-plugin-executable": "1.4.4",
+    "standard-version": "5.0.0",
     "tempy": "0.2.1",
     "trash-cli": "1.4.0",
     "unified": "7.1.0"
