chore: update yarn and dependencies

--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   "bugs": "https://github.com/psirenny/circleci-bin/issues",
   "dependencies": {
     "decompress": "4.2.0",
-    "fs-extra": "7.0.1",
-    "node-fetch": "2.3.0",
+    "fs-extra": "8.0.1",
+    "node-fetch": "2.6.0",
     "node-uname": "2.0.0",
     "npm-run-all": "4.1.5",
-    "tempy": "0.2.1"
+    "tempy": "0.3.0"
   },
   "devDependencies": {
-    "@babel/core": "7.3.4",
-    "@babel/node": "7.2.2",
+    "@babel/core": "7.4.5",
+    "@babel/node": "7.4.5",
     "@babel/plugin-external-helpers": "7.2.0",
-    "@babel/plugin-proposal-class-properties": "7.3.4",
-    "@babel/plugin-proposal-decorators": "7.3.0",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
+    "@babel/plugin-proposal-decorators": "7.4.4",
     "@babel/plugin-proposal-do-expressions": "7.2.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
@@ -28,47 +28,48 @@
     "@babel/plugin-proposal-function-sent": "7.2.0",
     "@babel/plugin-proposal-json-strings": "7.2.0",
     "@babel/plugin-proposal-logical-assignment-operators": "7.2.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.2.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.4.4",
     "@babel/plugin-proposal-numeric-separator": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.4",
     "@babel/plugin-proposal-optional-catch-binding": "7.2.0",
     "@babel/plugin-proposal-optional-chaining": "7.2.0",
     "@babel/plugin-proposal-pipeline-operator": "7.3.2",
     "@babel/plugin-proposal-throw-expressions": "7.2.0",
-    "@babel/plugin-proposal-unicode-property-regex": "7.2.0",
+    "@babel/plugin-proposal-unicode-property-regex": "7.4.4",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
-    "@babel/plugin-transform-flow-strip-types": "7.3.4",
-    "@babel/preset-env": "7.3.4",
-    "@commitlint/cli": "7.5.2",
-    "@commitlint/config-conventional": "7.5.0",
-    "@psirenny/babel-preset": "1.6.0",
-    "@psirenny/eslint-config": "1.7.1",
-    "@psirenny/npm-package-json-lint-config": "1.3.0",
-    "@psirenny/remark-preset": "1.5.0",
-    "@psirenny/retext-preset": "1.5.0",
-    "ava": "1.2.1",
+    "@babel/plugin-transform-flow-strip-types": "7.4.4",
+    "@babel/preset-env": "7.4.5",
+    "@commitlint/cli": "8.0.0",
+    "@commitlint/config-conventional": "8.0.0",
+    "@psirenny/babel-preset": "1.7.0",
+    "@psirenny/dictionary": "1.6.0",
+    "@psirenny/eslint-config": "1.8.0",
+    "@psirenny/npm-package-json-lint-config": "1.4.0",
+    "@psirenny/remark-preset": "1.6.1",
+    "@psirenny/retext-preset": "1.6.1",
+    "ava": "2.0.0",
     "babel-eslint": "10.0.1",
     "babel-plugin-preval": "3.0.1",
-    "dictionary-en-us": "2.0.0",
+    "dictionary-en-us": "2.1.1",
     "dir-compare": "1.7.2",
-    "eslint": "5.15.0",
+    "eslint": "5.16.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-plugin-array-func": "3.1.3",
-    "eslint-plugin-ava": "5.1.1",
+    "eslint-plugin-ava": "7.0.0",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-eslint-comments": "3.1.1",
-    "eslint-plugin-eslint-plugin": "2.0.1",
-    "eslint-plugin-flowtype": "3.4.2",
-    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-eslint-plugin": "2.1.0",
+    "eslint-plugin-flowtype": "3.9.1",
+    "eslint-plugin-import": "2.17.3",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-markdown": "1.0.0",
     "eslint-plugin-optimize-regex": "1.1.6",
-    "flow-bin": "0.94.0",
+    "flow-bin": "0.100.0",
     "greenkeeper-lockfile": "2.8.0",
-    "husky": "1.3.1",
-    "npm-package-json-lint": "3.6.0",
-    "nyc": "13.3.0",
+    "husky": "2.3.0",
+    "npm-package-json-lint": "3.6.1",
+    "nyc": "14.1.1",
     "remark-cli": "6.0.1",
     "remark-lint-blockquote-indentation": "1.0.2",
     "remark-lint-checkbox-character-style": "1.0.2",
@@ -88,8 +89,8 @@
     "retext-contractions": "2.1.3",
     "retext-diacritics": "1.2.2",
     "retext-english": "3.0.2",
-    "retext-equality": "3.9.1",
-    "retext-indefinite-article": "1.1.5",
+    "retext-equality": "3.10.0",
+    "retext-indefinite-article": "1.1.6",
     "retext-intensify": "3.0.2",
     "retext-passive": "1.3.2",
     "retext-profanities": "4.6.0",
@@ -102,12 +103,11 @@
     "retext-spell": "2.4.0",
     "retext-syntax-mentions": "1.1.5",
     "retext-syntax-urls": "1.0.1",
-    "rollup": "1.4.0",
+    "rollup": "1.13.1",
     "rollup-plugin-babel": "5.0.0-alpha.0",
-    "rollup-plugin-executable": "1.4.4",
-    "standard-version": "5.0.1",
-    "tempy": "0.2.1",
-    "trash-cli": "1.4.0",
+    "rollup-plugin-executable": "1.4.5",
+    "standard-version": "6.0.1",
+    "trash-cli": "3.0.0",
     "unified": "7.1.0"
   },
   "homepage": "https://github.com/psirenny/circleci-bin",
@@ -142,9 +142,10 @@
     "test:cov": "nyc check-coverage",
     "test:cov:report": "nyc report --reporter=html",
     "typecheck": "flow .",
-    "update": "run-s update:bin update:npm",
+    "update": "run-s update:bin update:js update:yarn",
     "update:bin": "babel-node src/code/scripts/update-version",
-    "update:npm": "yarn upgrade-interactive --latest"
+    "update:js": "yarn upgrade-interactive --latest",
+    "update:yarn": "yarn policies set-version"
   },
   "sideEffects": false
 }
