chore: add build to prepublish script

--- a/package.json
+++ b/package.json
@@ -138,7 +138,9 @@
     "lint:md": "remark --frail .",
     "lint:pkg": "npmPkgJsonLint ./package.json",
     "outdated": "yarn outdated",
+    "prepublish": "run-s build",
     "publish": "standard-version",
+    "release": "git push --follow-tags origin master && npm publish",
     "test": "nyc ava --verbose",
     "test:cov": "nyc check-coverage",
     "test:cov:report": "nyc report --reporter=html",
