--- a/package.json
+++ b/package.json
@@ -130,7 +130,6 @@
     "flow:install": "run-s flow:update",
     "flow:stub": "flow-typed create-stub",
     "flow:update": "flow-typed update",
-    "foo": "babel-node src/code/bin/circleci.js",
     "install:bin": "dist/install-binary",
     "install:dev": "yarn install --ignore-scripts && yarn run build && yarn install --force",
     "lint": "run-s lint:js lint:md lint:pkg",
@@ -140,7 +139,7 @@
     "outdated": "yarn outdated",
     "prepublish": "run-s build",
     "publish": "standard-version",
-    "release": "git push --follow-tags origin master && npm publish",
+    "release": "git push --follow-tags origin master && yarn publish",
     "test": "nyc ava --verbose",
     "test:cov": "nyc check-coverage",
     "test:cov:report": "nyc report --reporter=html",
