chore: update to yarn@1.22.0

--- a/.yarnrc
+++ b/.yarnrc
@@ -2,5 +2,6 @@
 # yarn lockfile v1
 
 
-lastUpdateCheck 1573739040497
-yarn-path ".yarn/releases/yarn-1.19.1.js"
+hdf5_home_linux "/usr/local/Cellar/hdf5/1.10.5_1/lib"
+lastUpdateCheck 1582817872250
+yarn-path ".yarn/releases/yarn-1.22.0.js"
