--- a/package.json
+++ b/package.json
@@ -8,68 +8,70 @@
   },
   "bugs": "https://github.com/psirenny/circleci-bin/issues",
   "dependencies": {
-    "decompress": "4.2.0",
-    "fs-extra": "8.1.0",
-    "node-fetch": "2.6.0",
-    "tempy": "0.3.0"
+    "decompress": "^4.2.0",
+    "fs-extra": "^8.1.0",
+    "node-fetch": "^2.6.0",
+    "tempy": "^0.4.0"
   },
   "devDependencies": {
-    "@babel/core": "7.7.2",
-    "@babel/node": "7.7.0",
-    "@babel/plugin-external-helpers": "7.2.0",
-    "@babel/plugin-proposal-class-properties": "7.7.0",
-    "@babel/plugin-proposal-decorators": "7.7.0",
-    "@babel/plugin-proposal-do-expressions": "7.6.0",
-    "@babel/plugin-proposal-export-default-from": "7.5.2",
-    "@babel/plugin-proposal-export-namespace-from": "7.5.2",
-    "@babel/plugin-proposal-function-bind": "7.2.0",
-    "@babel/plugin-proposal-function-sent": "7.7.0",
-    "@babel/plugin-proposal-json-strings": "7.2.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "7.2.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.4.4",
-    "@babel/plugin-proposal-numeric-separator": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.6.2",
-    "@babel/plugin-proposal-optional-catch-binding": "7.2.0",
-    "@babel/plugin-proposal-optional-chaining": "7.6.0",
-    "@babel/plugin-proposal-pipeline-operator": "7.5.0",
-    "@babel/plugin-proposal-throw-expressions": "7.2.0",
-    "@babel/plugin-proposal-unicode-property-regex": "7.7.0",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-syntax-import-meta": "7.2.0",
-    "@babel/plugin-transform-flow-strip-types": "7.6.3",
-    "@babel/polyfill": "7.7.0",
-    "@babel/preset-env": "7.7.1",
-    "@commitlint/cli": "8.2.0",
-    "@commitlint/config-conventional": "8.2.0",
-    "@psirenny/babel-preset": "2.0.2",
-    "@psirenny/dictionary": "2.0.2",
-    "@psirenny/eslint-config": "2.0.2",
-    "@psirenny/npm-package-json-lint-config": "2.0.2",
-    "@psirenny/remark-preset": "2.0.3",
-    "@psirenny/retext-preset": "2.0.3",
-    "ava": "2.4.0",
-    "babel-eslint": "10.0.3",
-    "babel-plugin-preval": "3.0.1",
-    "dictionary-en-us": "2.1.1",
-    "dir-compare": "1.8.0",
-    "eslint": "6.6.0",
+    "@ava/babel": "1.0.1",
+    "@babel/core": "7.8.6",
+    "@babel/node": "7.8.4",
+    "@babel/plugin-external-helpers": "7.8.3",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-decorators": "7.8.3",
+    "@babel/plugin-proposal-do-expressions": "7.8.3",
+    "@babel/plugin-proposal-export-default-from": "7.8.3",
+    "@babel/plugin-proposal-export-namespace-from": "7.8.3",
+    "@babel/plugin-proposal-function-bind": "7.8.3",
+    "@babel/plugin-proposal-function-sent": "7.8.3",
+    "@babel/plugin-proposal-json-strings": "7.8.3",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
+    "@babel/plugin-proposal-optional-catch-binding": "7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "7.8.3",
+    "@babel/plugin-proposal-pipeline-operator": "7.8.3",
+    "@babel/plugin-proposal-throw-expressions": "7.8.3",
+    "@babel/plugin-proposal-unicode-property-regex": "7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-syntax-import-meta": "7.8.3",
+    "@babel/plugin-transform-flow-strip-types": "7.8.3",
+    "@babel/polyfill": "7.8.3",
+    "@babel/preset-env": "7.8.6",
+    "@commitlint/cli": "8.3.5",
+    "@commitlint/config-conventional": "8.3.4",
+    "@psirenny/babel-preset": "3.0.2",
+    "@psirenny/dictionary": "3.0.2",
+    "@psirenny/eslint-config": "3.1.1",
+    "@psirenny/npm-package-json-lint-config": "3.0.2",
+    "@psirenny/remark-preset": "3.0.2",
+    "@psirenny/retext-preset": "3.0.2",
+    "ava": "3.4.0",
+    "babel-eslint": "10.1.0",
+    "babel-plugin-preval": "4.0.0",
+    "dictionary-en-us": "2.2.1",
+    "dir-compare": "2.2.0",
+    "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.0.0",
-    "eslint-plugin-array-func": "3.1.3",
-    "eslint-plugin-ava": "9.0.0",
+    "eslint-plugin-array-func": "3.1.4",
+    "eslint-plugin-ava": "10.2.0",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-eslint-comments": "3.1.2",
-    "eslint-plugin-eslint-plugin": "2.1.0",
-    "eslint-plugin-flowtype": "4.4.1",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-markdown": "1.0.1",
+    "eslint-plugin-eslint-plugin": "2.2.1",
+    "eslint-plugin-flowtype": "4.6.0",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-markdown": "1.0.2",
     "eslint-plugin-optimize-regex": "1.1.7",
-    "eslint-plugin-unicorn": "12.1.0",
-    "flow-bin": "0.112.0",
+    "eslint-plugin-unicorn": "16.1.1",
+    "flow-bin": "0.119.1",
+    "flow-typed": "3.0.0",
     "greenkeeper-lockfile": "2.8.0",
-    "husky": "3.0.9",
-    "npm-package-json-lint": "4.1.0",
+    "husky": "4.2.3",
+    "npm-package-json-lint": "4.6.0",
     "npm-run-all": "4.1.5",
-    "nyc": "14.1.1",
+    "nyc": "15.0.0",
     "remark-cli": "7.0.1",
     "remark-lint-blockquote-indentation": "1.0.3",
     "remark-lint-checkbox-character-style": "1.0.3",
@@ -89,7 +91,7 @@
     "retext-contractions": "3.0.0",
     "retext-diacritics": "2.0.0",
     "retext-english": "3.0.4",
-    "retext-equality": "4.2.0",
+    "retext-equality": "4.5.0",
     "retext-indefinite-article": "1.1.7",
     "retext-intensify": "4.0.0",
     "retext-passive": "2.0.0",
@@ -99,14 +101,14 @@
     "retext-redundant-acronyms": "2.0.0",
     "retext-repeated-words": "2.0.0",
     "retext-sentence-spacing": "3.0.0",
-    "retext-simplify": "5.0.0",
+    "retext-simplify": "5.1.0",
     "retext-spell": "3.0.0",
     "retext-syntax-mentions": "1.1.6",
     "retext-syntax-urls": "1.0.2",
-    "rollup": "1.27.0",
+    "rollup": "1.31.1",
     "rollup-plugin-babel": "5.0.0-alpha.0",
-    "rollup-plugin-executable": "1.5.1",
-    "standard-version": "7.0.0",
+    "rollup-plugin-executable": "1.5.2",
+    "standard-version": "7.1.0",
     "trash-cli": "3.0.0",
     "unified": "8.4.2"
   },
