--- a/package.json
+++ b/package.json
@@ -8,109 +8,109 @@
   },
   "bugs": "https://github.com/psirenny/circleci-bin/issues",
   "dependencies": {
-    "decompress": "^4.2.0",
-    "fs-extra": "^8.1.0",
+    "decompress": "^4.2.1",
+    "fs-extra": "^9.0.1",
     "node-fetch": "^2.6.0",
-    "tempy": "^0.4.0"
+    "tempy": "^0.5.0"
   },
   "devDependencies": {
     "@ava/babel": "1.0.1",
-    "@babel/core": "7.8.6",
-    "@babel/node": "7.8.4",
-    "@babel/plugin-external-helpers": "7.8.3",
-    "@babel/plugin-proposal-class-properties": "7.8.3",
-    "@babel/plugin-proposal-decorators": "7.8.3",
-    "@babel/plugin-proposal-do-expressions": "7.8.3",
-    "@babel/plugin-proposal-export-default-from": "7.8.3",
-    "@babel/plugin-proposal-export-namespace-from": "7.8.3",
-    "@babel/plugin-proposal-function-bind": "7.8.3",
-    "@babel/plugin-proposal-function-sent": "7.8.3",
-    "@babel/plugin-proposal-json-strings": "7.8.3",
-    "@babel/plugin-proposal-logical-assignment-operators": "7.8.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.8.3",
-    "@babel/plugin-proposal-numeric-separator": "7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
-    "@babel/plugin-proposal-optional-catch-binding": "7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "7.8.3",
-    "@babel/plugin-proposal-pipeline-operator": "7.8.3",
-    "@babel/plugin-proposal-throw-expressions": "7.8.3",
-    "@babel/plugin-proposal-unicode-property-regex": "7.8.3",
+    "@babel/core": "7.10.2",
+    "@babel/node": "7.10.1",
+    "@babel/plugin-external-helpers": "7.10.1",
+    "@babel/plugin-proposal-class-properties": "7.10.1",
+    "@babel/plugin-proposal-decorators": "7.10.1",
+    "@babel/plugin-proposal-do-expressions": "7.10.1",
+    "@babel/plugin-proposal-export-default-from": "7.10.1",
+    "@babel/plugin-proposal-export-namespace-from": "7.10.1",
+    "@babel/plugin-proposal-function-bind": "7.10.1",
+    "@babel/plugin-proposal-function-sent": "7.10.1",
+    "@babel/plugin-proposal-json-strings": "7.10.1",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.10.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.10.1",
+    "@babel/plugin-proposal-numeric-separator": "7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "7.10.1",
+    "@babel/plugin-proposal-optional-catch-binding": "7.10.1",
+    "@babel/plugin-proposal-optional-chaining": "7.10.1",
+    "@babel/plugin-proposal-pipeline-operator": "7.10.1",
+    "@babel/plugin-proposal-throw-expressions": "7.10.1",
+    "@babel/plugin-proposal-unicode-property-regex": "7.10.1",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-syntax-import-meta": "7.8.3",
-    "@babel/plugin-transform-flow-strip-types": "7.8.3",
-    "@babel/polyfill": "7.8.3",
-    "@babel/preset-env": "7.8.6",
+    "@babel/plugin-syntax-import-meta": "7.10.1",
+    "@babel/plugin-transform-flow-strip-types": "7.10.1",
+    "@babel/polyfill": "7.10.1",
+    "@babel/preset-env": "7.10.2",
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
-    "@psirenny/babel-preset": "3.0.2",
-    "@psirenny/dictionary": "3.0.2",
-    "@psirenny/eslint-config": "3.1.1",
-    "@psirenny/npm-package-json-lint-config": "3.0.2",
-    "@psirenny/remark-preset": "3.0.2",
-    "@psirenny/retext-preset": "3.0.2",
-    "ava": "3.4.0",
+    "@psirenny/babel-preset": "4.0.4",
+    "@psirenny/dictionary": "4.0.4",
+    "@psirenny/eslint-config": "8.0.0",
+    "@psirenny/npm-package-json-lint-config": "4.0.4",
+    "@psirenny/remark-preset": "4.0.4",
+    "@psirenny/retext-preset": "4.0.4",
+    "ava": "3.9.0",
     "babel-eslint": "10.1.0",
-    "babel-plugin-preval": "4.0.0",
-    "dictionary-en-us": "2.2.1",
-    "dir-compare": "2.2.0",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-base": "14.0.0",
-    "eslint-plugin-array-func": "3.1.4",
-    "eslint-plugin-ava": "10.2.0",
+    "babel-plugin-preval": "5.0.0",
+    "dictionary-en-us": "3.0.0",
+    "dir-compare": "2.3.0",
+    "eslint": "7.2.0",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-plugin-array-func": "3.1.6",
+    "eslint-plugin-ava": "10.3.1",
     "eslint-plugin-babel": "5.3.0",
-    "eslint-plugin-eslint-comments": "3.1.2",
-    "eslint-plugin-eslint-plugin": "2.2.1",
-    "eslint-plugin-flowtype": "4.6.0",
-    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-eslint-plugin": "2.2.2",
+    "eslint-plugin-flowtype": "5.1.3",
+    "eslint-plugin-import": "2.21.2",
     "eslint-plugin-markdown": "1.0.2",
-    "eslint-plugin-optimize-regex": "1.1.7",
-    "eslint-plugin-unicorn": "16.1.1",
-    "flow-bin": "0.119.1",
-    "flow-typed": "3.0.0",
+    "eslint-plugin-optimize-regex": "1.2.0",
+    "eslint-plugin-unicorn": "20.1.0",
+    "flow-bin": "0.127.0",
+    "flow-typed": "3.1.0",
     "greenkeeper-lockfile": "2.8.0",
-    "husky": "4.2.3",
-    "npm-package-json-lint": "4.6.0",
+    "husky": "4.2.5",
+    "npm-package-json-lint": "5.1.0",
     "npm-run-all": "4.1.5",
-    "nyc": "15.0.0",
-    "remark-cli": "7.0.1",
-    "remark-lint-blockquote-indentation": "1.0.3",
-    "remark-lint-checkbox-character-style": "1.0.3",
-    "remark-lint-code-block-style": "1.0.3",
-    "remark-lint-emphasis-marker": "1.0.3",
-    "remark-lint-fenced-code-marker": "1.0.3",
-    "remark-lint-heading-style": "1.0.3",
-    "remark-lint-link-title-style": "1.0.4",
-    "remark-lint-rule-style": "1.0.3",
-    "remark-lint-strong-marker": "1.0.3",
-    "remark-lint-table-cell-padding": "1.0.4",
-    "remark-preset-lint-consistent": "2.0.3",
-    "remark-preset-lint-markdown-style-guide": "2.1.3",
-    "remark-preset-lint-recommended": "3.0.3",
-    "remark-retext": "3.1.3",
+    "nyc": "15.1.0",
+    "remark-cli": "8.0.0",
+    "remark-lint-blockquote-indentation": "2.0.0",
+    "remark-lint-checkbox-character-style": "2.0.0",
+    "remark-lint-code-block-style": "2.0.0",
+    "remark-lint-emphasis-marker": "2.0.0",
+    "remark-lint-fenced-code-marker": "2.0.0",
+    "remark-lint-heading-style": "2.0.0",
+    "remark-lint-link-title-style": "2.0.0",
+    "remark-lint-rule-style": "2.0.0",
+    "remark-lint-strong-marker": "2.0.0",
+    "remark-lint-table-cell-padding": "2.0.0",
+    "remark-preset-lint-consistent": "3.0.0",
+    "remark-preset-lint-markdown-style-guide": "3.0.0",
+    "remark-preset-lint-recommended": "4.0.0",
+    "remark-retext": "4.0.0",
     "retext-assuming": "1.0.0",
-    "retext-contractions": "3.0.0",
-    "retext-diacritics": "2.0.0",
+    "retext-contractions": "4.0.0",
+    "retext-diacritics": "3.0.0",
     "retext-english": "3.0.4",
-    "retext-equality": "4.5.0",
-    "retext-indefinite-article": "1.1.7",
-    "retext-intensify": "4.0.0",
-    "retext-passive": "2.0.0",
-    "retext-profanities": "5.0.0",
-    "retext-quotes": "3.0.0",
-    "retext-readability": "5.0.0",
-    "retext-redundant-acronyms": "2.0.0",
-    "retext-repeated-words": "2.0.0",
-    "retext-sentence-spacing": "3.0.0",
-    "retext-simplify": "5.1.0",
-    "retext-spell": "3.0.0",
-    "retext-syntax-mentions": "1.1.6",
-    "retext-syntax-urls": "1.0.2",
-    "rollup": "1.31.1",
+    "retext-equality": "5.0.0",
+    "retext-indefinite-article": "2.0.1",
+    "retext-intensify": "5.0.0",
+    "retext-passive": "3.0.0",
+    "retext-profanities": "6.0.0",
+    "retext-quotes": "4.0.0",
+    "retext-readability": "6.0.0",
+    "retext-redundant-acronyms": "3.0.0",
+    "retext-repeated-words": "3.0.0",
+    "retext-sentence-spacing": "4.0.0",
+    "retext-simplify": "6.0.0",
+    "retext-spell": "4.0.0",
+    "retext-syntax-mentions": "2.1.0",
+    "retext-syntax-urls": "2.0.0",
+    "rollup": "2.17.0",
     "rollup-plugin-babel": "5.0.0-alpha.0",
-    "rollup-plugin-executable": "1.5.2",
-    "standard-version": "7.1.0",
+    "rollup-plugin-executable": "1.6.0",
+    "standard-version": "8.0.0",
     "trash-cli": "3.0.0",
-    "unified": "8.4.2"
+    "unified": "9.0.0"
   },
   "homepage": "https://github.com/psirenny/circleci-bin",
   "keywords": [
@@ -125,7 +125,7 @@
   "scripts": {
     "audit": "yarn audit",
     "build": "rollup -c",
-    "check": "run-s audit lint test test:cov typecheck",
+    "check": "run-s lint test test:cov typecheck",
     "ci:check": "ci:validate ci:run",
     "ci:run": ".bin/circleci build --job check",
     "ci:validate": ".bin/circleci config validate",
