--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/node:10.14.1
     steps:
       - checkout
-      - run: yarn run install:dev
+      - run: yarn install
       - run: yarn run build
       - run: yarn run check
 workflows:
